New scheduler package used
Corresponding code changed.

--- a/egglender-class/public/index.html
+++ b/egglender-class/public/index.html
@@ -23,9 +23,29 @@
   
 </head>
 <body>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link rel="stylesheet" href="">
-<div id="root"></div>
+  <!DOCTYPE html>
+<html>
+
+<head>
+    <title>DevExtreme Demo</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/20.2.3/css/dx.common.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/20.2.3/css/dx.material.blue.light.css" />
+
+
+
+    </head>
+
+<body class="dx-viewport">
+    <div class="demo-container">
+        <div id="app"></div>
+    </div>
+</body>
+
+
+</html>
 
   <!--
     This HTML file is a template.
