--- a/egglenderlogin/egglenderlogin/public/index.html
+++ b/egglenderlogin/egglenderlogin/public/index.html
@@ -11,4 +11,27 @@
     <body>
         <div id="root"></div>
     </body>
+
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="theme-color" content="#000000">
+        <title>DevExtreme Demo</title>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/20.2.3/css/dx.common.css" />
+        <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/20.2.3/css/dx.material.blue.light.css" />
+
+    </head>
+
+    <body class="dx-viewport">
+        <div class="demo-container">
+            <div id="app"></div>
+        </div>
+    </body>
+
+
 </html>
