--- a/egglenderlogin/public/index.html
+++ b/egglenderlogin/public/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewpoint" content="width=device-width, initial-scale=1">
         <title>Egglendar</title>
-        <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+        <link href="%PUBLIC_URL%/bootstrap.min.css" rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="../src/calendar-friend/image/useravatar.png">
-        <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+        <script src="%PUBLIC_URL%/jquery.min.js"></script>
+        <script src="%PUBLIC_URL%/bootstrap.min.js"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="theme-color" content="#000000">
