--- a/egglenderlogin/public/index.html
+++ b/egglenderlogin/public/index.html
@@ -34,7 +34,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
         <link rel="icon" type="image/png" href="../src/calendar-friend/image/useravatar.png">
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-        <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
+         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
         <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/20.2.3/css/dx.common.css" />
         <link rel="stylesheet" type="text/css" href="https://cdn3.devexpress.com/jslib/20.2.3/css/dx.material.blue.light.css" />
 
@@ -44,7 +44,7 @@
         <div class="demo-container">
             <div id="app"></div>
         </div>
-    </body> -->
+    </body> 
 
 
 </html>
